argocd/apps/crawl/crw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crw
  namespace: crawl
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: crw
      port: { number: 80 }
  tls:
    - hosts: [ crw ]
