argocd/apps/crawl/searxng-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  namespace: crawl
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: searxng
      port: { number: 80 }
  tls:
    - hosts: [ searxng ]
